<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/brown_light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:inputType="textPersonName"
        android:hint="@string/nomeTxt"
        android:background="@drawable/shape_fields"
        android:ems="10"
        android:id="@+id/nome_edt"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:inputType="phone"
        android:hint="@string/telefoneTxt"
        android:ems="10"
        android:id="@+id/telefone_edt"
        android:background="@drawable/shape_fields"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:inputType="textEmailAddress"
        android:hint="@string/emailTxt"
        android:ems="10"
        android:id="@+id/email_edt"
        android:background="@drawable/shape_fields"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:inputType="textPassword"
        android:hint="@string/senhaTxt"
        android:ems="10"
        android:id="@+id/senha_edt"
        android:background="@drawable/shape_fields"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:inputType="text"
        android:hint="@string/generoTxt"
        android:ems="10"
        android:id="@+id/genero_edt"
        android:background="@drawable/shape_fields"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:inputType="text"
        android:hint="@string/subGeneroTxt"
        android:ems="10"
        android:id="@+id/sub_genero_edt"
        android:background="@drawable/shape_fields"
        android:layout_marginTop="10dp" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:id="@+id/cidade_edt"
        android:hint="@string/cidadeTxt"
        android:background="@drawable/shape_fields"
        android:ems="10"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:id="@+id/estado_edt"
        android:hint="@string/estadoTxt"
        android:background="@drawable/shape_fields"
        android:ems="10"
        android:layout_marginTop="10dp" />


     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/cadastrarTxt"
         android:textColor="@color/branco"
         android:id="@+id/cadastrar_button"
         android:background="@drawable/shape_button"
         android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>
